; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_mpc85xx_edac.c_mpc85xx_mc_inject_data_lo_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_mpc85xx_edac.c_mpc85xx_mc_inject_data_lo_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_ctl_info = type { %struct.mpc85xx_mc_pdata* }
%struct.mpc85xx_mc_pdata = type { i64 }

@.str = private unnamed_addr constant [7 x i8] c"0x%08x\00", align 1
@MPC85XX_MC_DATA_ERR_INJECT_LO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mem_ctl_info*, i8*)* @mpc85xx_mc_inject_data_lo_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpc85xx_mc_inject_data_lo_show(%struct.mem_ctl_info* %0, i8* %1) #0 {
  %3 = alloca %struct.mem_ctl_info*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mpc85xx_mc_pdata*, align 8
  store %struct.mem_ctl_info* %0, %struct.mem_ctl_info** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %3, align 8
  %7 = getelementptr inbounds %struct.mem_ctl_info, %struct.mem_ctl_info* %6, i32 0, i32 0
  %8 = load %struct.mpc85xx_mc_pdata*, %struct.mpc85xx_mc_pdata** %7, align 8
  store %struct.mpc85xx_mc_pdata* %8, %struct.mpc85xx_mc_pdata** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load %struct.mpc85xx_mc_pdata*, %struct.mpc85xx_mc_pdata** %5, align 8
  %11 = getelementptr inbounds %struct.mpc85xx_mc_pdata, %struct.mpc85xx_mc_pdata* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @MPC85XX_MC_DATA_ERR_INJECT_LO, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @in_be32(i64 %14)
  %16 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %15)
  ret i32 %16
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @in_be32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
